--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
-<script src="cordova.js" charset="utf-8"></script>
+<!-- <script src="cordova.js" charset="utf-8"></script> -->
 
     <!-- your app's js -->
     <script src="js/openfb.js"></script>
